--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   
     <div class="page">
       <div class="front">
-        <p>the person flips the pages based off of what page they click. and the book will adjust its size based off of how long ur msg is. add <div class="front cover"> </div> <div class="back">   </div>
-    </div> in order to add another page
+        <p>the person flips the pages based off of what page they click. and the book will adjust its size based off of how long ur msg is.
 
         </p>
       </div>
