--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Friendly reminder that I am always here for you.</p>
       </div>
       <div class="back">
-        <img src="https://share.google/images/4C1M6vbhOYbvrXape" alt="Img 1">
+        <img src="https://i.pinimg.com/736x/98/d0/79/98d0798db8619f4ae3cda623ea7157d0.jpg" alt="Img 1">
       </div>
     </div>
   
@@ -27,7 +27,7 @@
   
     <div class="page">
       <div class="front">
-        <img src="https://share.google/images/LNdxlNc7NaOWdomFr" alt="Img 2">
+        <img src="https://i.pinimg.com/736x/63/b6/8e/63b68ecd09359e973d52685b8788d3e7.jpg" alt="Img 2">
       </div>
       <div class="back cover">
         <h3>I love you!</h3>
