--- a/index.html
+++ b/index.html
@@ -16,21 +16,19 @@
   
     <div class="page">
       <div class="front">
-        <p>Friendly reminder that I am always here for you.</p>
+        <p>Friendly reminder that I am always here for you. And thank you for sharing this last year with me!</p>
       </div>
       <div class="back">
         <img src="https://i.pinimg.com/736x/98/d0/79/98d0798db8619f4ae3cda623ea7157d0.jpg" alt="Img 1">
       </div>
     </div>
   
-   
-  
     <div class="page">
       <div class="front">
         <img src="https://i.pinimg.com/736x/63/b6/8e/63b68ecd09359e973d52685b8788d3e7.jpg" alt="Img 2">
       </div>
       <div class="back cover">
-        <h3>I love you!</h3>
+        <h3>I love you! -Donna</h3>
         
       </div>
       <script src="script.js"></script>
