--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="https://i.pinimg.com/736x/63/b6/8e/63b68ecd09359e973d52685b8788d3e7.jpg" alt="Img 2">
       </div>
       <div class="back cover">
-        <h3>I love you! -Donna</h3>
+        <h3>I love you! - Donna <3</h3>
         
       </div>
       <script src="script.js"></script>
